Fixed lang file

--- a/src/main/resources/assets/shepfood/lang/en_us.json
+++ b/src/main/resources/assets/shepfood/lang/en_us.json
@@ -18,6 +18,8 @@
 	"item.shepfood.burger_bun" : "Burger Bun",
 	"item.shepfood.sandwich" : "Sandwich",
 	"item.shepfood.rice" : "Rice",
+	"item.shepfood.noodles" : "Noodles",
+	"item.shepfood.noodle_soup" : "Noodle Soup",
 	"item.shepfood.rice_bowl" : "Rice Bowl",
 	"item.shepfood.dumpling" : "Dumpling",
 	"item.shepfood.sushi" : "Sushi",
