added pepperoni pizza + spaghetti

--- a/src/main/resources/assets/shepfood/lang/en_us.json
+++ b/src/main/resources/assets/shepfood/lang/en_us.json
@@ -12,11 +12,15 @@
 	"item.shepfood.cheese_pizza_slice": "Cheese Pizza",
 	"item.shepfood.cooked_cheese_pizza": "Cooked Cheese Pizza",
 	"item.shepfood.uncooked_cheese_pizza": "Uncooked Cheese Pizza",
+	"item.shepfood.cooked_pepperoni_pizza": "Cooked Pepperoni Pizza",
+	"item.shepfood.uncooked_pepperoni_pizza": "Uncooked Pepperoni Pizza",
 	"item.shepfood.tomato_sauce_bottle" : "Tomato Sauce",
 	"item.shepfood.cheese" : "Cheese",
 	"item.shepfood.cheeseburger" : "Cheeseburger",
 	"item.shepfood.burger_bun" : "Burger Bun",
 	"item.shepfood.sandwich" : "Sandwich",
+	"item.shepfood.spaghetti" : "Spaghetti",
+	"item.shepfood.spaghetti_meatballs" : "Spaghetti with Meatballs",
 	"item.shepfood.rice" : "Rice",
 	"item.shepfood.noodles" : "Noodles",
 	"item.shepfood.noodle_soup" : "Noodle Soup",
@@ -25,6 +29,7 @@
 	"item.shepfood.sushi" : "Sushi",
 	"block.shepfood.unknown_block" : "Unknown Block",
 	"block.shepfood.cheese_pizza" : "Cooked Cheese Pizza",
+	"block.shepfood.pepperoni_pizza" : "Cooked Pepperoni Pizza",
 	"block.shepfood.tomato_plant" : "Tomato Seeds",
 	"block.shepfood.rice_plant" : "Rice Seeds",
 	"block.shepfood.onion_plant" : "Onion",
