added hotdog and muffin, this is a pre release

--- a/src/main/resources/assets/shepfood/lang/en_us.json
+++ b/src/main/resources/assets/shepfood/lang/en_us.json
@@ -22,6 +22,10 @@
 	"item.shepfood.spaghetti" : "Spaghetti",
 	"item.shepfood.spaghetti_meatballs" : "Spaghetti with Meatballs",
 	"item.shepfood.rice" : "Rice",
+	"item.shepfood.pepperoni" : "Pepperoni",
+	"item.shepfood.hotdog" : "Hot Dog",
+	"item.shepfood.cooked_egg" : "Cooked Egg",
+	"item.shepfood.muffin" : "Muffin",
 	"item.shepfood.noodles" : "Noodles",
 	"item.shepfood.noodle_soup" : "Noodle Soup",
 	"item.shepfood.rice_bowl" : "Rice Bowl",
