--- a/src/main/resources/assets/shepfood/lang/en_us.json
+++ b/src/main/resources/assets/shepfood/lang/en_us.json
@@ -9,7 +9,8 @@
 	"item.shepfood.raw_chicken_nugget" : "Raw Chicken Nugget",
 	"item.shepfood.cooked_chicken_nugget" : "Cooked Chicken Nugget",
 	"item.shepfood.onion": "Onion",
-	"item.shepfood.cheese_pizza_slice": "Cheese Pizza",
+	"item.shepfood.cheese_pizza_slice": "Cheese Pizza Slice",
+	"item.shepfood.pepperoni_pizza_slice": "Pepperoni Pizza Slice",
 	"item.shepfood.cooked_cheese_pizza": "Cooked Cheese Pizza",
 	"item.shepfood.uncooked_cheese_pizza": "Uncooked Cheese Pizza",
 	"item.shepfood.cooked_pepperoni_pizza": "Cooked Pepperoni Pizza",
