--- a/src/main/resources/assets/shepfood/lang/en_us.json
+++ b/src/main/resources/assets/shepfood/lang/en_us.json
@@ -23,8 +23,10 @@
 	"item.shepfood.spaghetti" : "Spaghetti",
 	"item.shepfood.spaghetti_meatballs" : "Spaghetti with Meatballs",
 	"item.shepfood.rice" : "Rice",
+	"item.shepfood.knife" : "knife",
 	"item.shepfood.pepperoni" : "Pepperoni",
 	"item.shepfood.hotdog" : "Hot Dog",
+	"item.shepfood.cake_slice" : "Cake Slice",
 	"item.shepfood.cooked_egg" : "Cooked Egg",
 	"item.shepfood.muffin" : "Muffin",
 	"item.shepfood.noodles" : "Noodles",
