--- a/src/main/resources/assets/shepfood/lang/en_us.json
+++ b/src/main/resources/assets/shepfood/lang/en_us.json
@@ -9,6 +9,7 @@
 	"item.shepfood.raw_chicken_nugget" : "Raw Chicken Nugget",
 	"item.shepfood.cooked_chicken_nugget" : "Cooked Chicken Nugget",
 	"item.shepfood.onion": "Onion",
+	"item.shepfood.meatball": "Meatball",
 	"item.shepfood.cheese_pizza_slice": "Cheese Pizza Slice",
 	"item.shepfood.pepperoni_pizza_slice": "Pepperoni Pizza Slice",
 	"item.shepfood.cooked_cheese_pizza": "Cooked Cheese Pizza",
@@ -16,15 +17,28 @@
 	"item.shepfood.cooked_pepperoni_pizza": "Cooked Pepperoni Pizza",
 	"item.shepfood.uncooked_pepperoni_pizza": "Uncooked Pepperoni Pizza",
 	"item.shepfood.tomato_sauce_bottle" : "Tomato Sauce",
+	"item.shepfood.ice_cream": "Ice Cream",
+	"item.shepfood.ice_cream_bowl": "Ice Cream Bowl",
+	"item.shepfood.waffle": "Waffle",
+	"item.shepfood.pancake": "Pancake",
+	"item.shepfood.waffle_honey": "Waffle with Honey",
+	"item.shepfood.ice_cream_cone": "Ice Cream Cone",
+	"item.shepfood.waffle_cone" : "Waffle Cone",
 	"item.shepfood.cheese" : "Cheese",
 	"item.shepfood.cheeseburger" : "Cheeseburger",
 	"item.shepfood.burger_bun" : "Burger Bun",
+	"item.shepfood.grilled_cheese" : "Grilled Cheese",
+	"item.shepfood.bread_slice" : "Bread Slice",
 	"item.shepfood.sandwich" : "Sandwich",
+	"item.shepfood.french_fries" : "French Fries",
 	"item.shepfood.spaghetti" : "Spaghetti",
 	"item.shepfood.spaghetti_meatballs" : "Spaghetti with Meatballs",
 	"item.shepfood.rice" : "Rice",
-	"item.shepfood.knife" : "knife",
+	"item.shepfood.knife" : "Knife",
 	"item.shepfood.pepperoni" : "Pepperoni",
+	"item.shepfood.macaroni" : "Macaroni",
+	"item.shepfood.macaroni_and_cheese" : "Mac N' Cheese",
+	"item.shepfood.cereal" : "Cereal",
 	"item.shepfood.hotdog" : "Hot Dog",
 	"item.shepfood.cake_slice" : "Cake Slice",
 	"item.shepfood.cooked_egg" : "Cooked Egg",
